fix card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -76,9 +76,18 @@ select {
   margin-top: 30px;
 }
 
+.laptop-button {
+  display: flex;
+  justify-content: center;
+}
+
 .rental-input {
   display: flex;
   margin-top: 50px;
   justify-content: center;
 }
 
+.rental-button {
+  display: flex;
+  justify-content: center;
+}
